Fixed some mobile and safari properties not showing

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
   flex-direction: column;
   max-width: 700px;
   align-items: center;
+  margin: 0 1rem;
 }
 
 .search form input {
@@ -27,7 +28,10 @@
   border-radius: 25px;
   /* border: 1px solid #626976; */
   border: none;
+  -webkit-appearance: none;
+  -webkit-box-shadow: 0px 10px 34px 4px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 10px 34px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
 }
 
 .search form input:focus {
@@ -62,4 +66,7 @@
     flex-direction: column;
     align-items: center;
   }
+}
+
+@media (max-width: 500px) {
 }
